--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/micsmics/movie-video-maker#readme",
   "dependencies": {
     "mysql": "^2.16.0",
-    "readline-sync": "^1.4.9"
+    "readline-sync": "^1.4.9",
+    "request": "^2.88.0"
   }
 }
