--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/micsmics/movie-video-maker#readme",
   "dependencies": {
+    "express": "^4.16.4",
+    "gm": "^1.23.1",
+    "googleapis": "^39.2.0",
     "image-downloader": "^3.4.2",
     "mysql": "^2.16.0",
+    "opn": "^6.0.0",
     "readline-sync": "^1.4.9",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
