--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "googleapis": "^39.2.0",
     "image-downloader": "^3.4.2",
     "mysql": "^2.16.0",
+    "nightmare": "^3.0.2",
     "opn": "^6.0.0",
     "readline-sync": "^1.4.9",
     "request": "^2.88.0",
